# predictive-ml-models

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PROPOSAL.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: finance_config.yaml  health_model.yaml  healthcare_config.yaml  stock_model.yaml
data/sample/: health_scores.csv  stock_patterns.csv
scripts/: evaluate.py  generate_report.py  generate_sample_data.py  predict.py  train.py
src/: __init__.py  config.py  main.py
src/api/: models.py  routes.py
src/data/: __init__.py  loader.py  preprocessor.py  splitter.py
src/evaluation/: __init__.py  drift_detector.py  explainability.py  metrics.py  monitoring.py
src/models/: __init__.py  ensemble.py  health_predictor.py  pattern_detector.py  time_series.py
src/pipelines/: finance_pipeline.py  healthcare_pipeline.py
src/serving/: __init__.py  batch_predictor.py  predictor.py
src/training/: __init__.py  cross_validator.py  hyperopt.py  trainer.py
tests/: __init__.py  test_health_predictor.py  test_models.py  test_pattern_detector.py  test_pipeline.py  test_predictions.py  test_preprocessor.py
